--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     <section class="banner" id="000">
         <div class="textBx">
             <h2>Hello, I'm <br><span>Razeen</span></h2>
-            <h3> - an aspiring full-stack developer.</h3>
+            <h3> - an aspiring IT professional.</h3>
             <a href="#001" class="btn">About</a>
         </div>
     </section>
     <section class="about" id="001">
+        <br> <br>
         <div class="heading">
             <h2>About Me</h2>
             <hr>
@@ -41,12 +42,12 @@
         </div>
         <div class="content">
             <div class="contentbx w50">
-                <h3>I'm an aspiring full-stack developer.</h3>
+                <h3>I'm an aspiring IT professional.</h3>
                 <p>I'm Razeen from Colachel - kanyakumari district, currently pursuing my bachelor's degree in CSE from 
-                    Kongu Engineering College, Erode. I'm a passionate programmer (C, Java, Python, JavaScript, Typescript), app-developer (Dart, Flutter)
-                    and a creative web-designer (HTML5, Bootstrap, Node, Angular). I do possess knowledge in database management concepts (SQL, MongoDB) as well.
+                    Kongu Engineering College, Erode. I'm a passionate programmer (C, Java, Python)
+                    and a creative web-designer (HTML5, CSS, Bootstrap). I do possess knowledge in database management concepts (MySQL) as well.
                     <br>
-                    My short-term goal is to achieve full-stack development knowledge. However, I have a special interest in automation and machine learning.
+                    My ambition and goal is to become a proficient programmer. I have a special interest in automation and machine learning.
                     <br>
                     <br>
                     Feel free to contact me, if you wish to work with me or even if you want my cooperation in your projects. 
@@ -58,9 +59,11 @@
                 </p>
             </div>
             <div class="w50">
-                <img src="./img/img1.jpg" class="img">
+                <img src="./img/escr.jpg" class="img">
             </div>
         </div>
+        <br>
+        <br>
     </section>
 
     <section class="skills" id="002">
@@ -73,16 +76,16 @@
         </div>
         <div class="content">
             <div class="skillbx">
+                <img src="./img/java.png" alt="web design">
+                <h2>Programming</h2>
+            </div>
+            <div class="skillbx">
+                <img src="./img/dbms.png" alt="web design">
+                <h2>Database <br> Management</h2>
+            </div>
+            <div class="skillbx">
                 <img src="./img/icon1.png" alt="web design">
                 <h2>Web Design</h2>
-            </div>
-            <div class="skillbx">
-                <img src="./img/icon2.png" alt="web design">
-                <h2>Web Development</h2>
-            </div>
-            <div class="skillbx">
-                <img src="./img/icon3.png" alt="web design">
-                <h2>Android App</h2>
             </div>
             <div class="skillbx">
                 <img src="./img/icon4.png" alt="web design">
@@ -102,26 +105,34 @@
     <section class="projects" id="003">
         <div class="heading">
             <h2>Projects</h2>
-            <p>The following are some basic projects that we had developed</p>
+            <p>The following are some basic projects that I had developed</p>
             <br>
             <hr color="gray">
         </div>
         <div class="content">
             <div class="probx">
-                <img src="./img/delivery-truck.png">
+                <a href="https://github.com/razeen11/foodieweb.git" target="_blank"><img src="./img/delivery-truck.png"></a>
                 <span class="tooltiptext"><b>FOODIEWEB - Online Food Delivery System</b></span>
             </div>
             <div class="probx">
-                <img src="./img/sera1.png">
+                <a href="https://github.com/razeen11/virtual-assistant.git" target="_blank"><img src="./img/sera1.png"></a>
                 <span class="tooltiptext"><b>SERA - Smart and Eminent Robust Assistant</b></span>
             </div>
             <div class="probx">
-                <img src="./img/online-recruitment.png">
-                <span class="tooltiptext"><b>SRS - Smart Recruitment System</b></span>
+                <a href="https://github.com/razeen11/portfolio" target="_blank"><img src="./img/portfolio1.png"></a>
+                <span class="tooltiptext"><b>A simple portfolio template</b></span>
             </div>
             <div class="probx">
-                <img src="./img/presentation.png">
-                <span class="tooltiptext"> <b>MAANAAKKAR - Student Activity Management System</b></span>
+                <a href="D:\github\portfolio\info\info.html" target="_blank"><img src="./img/online-recruitment.png"></a>
+                <span class="tooltiptext"><b>SRS - Smart Recruitment System</b><br>(under development)</span>
+            </div>
+            <div class="probx">
+                <a href="D:\github\portfolio\info\info.html" target="_blank"><img src="./img/presentation.png"></a>
+                <span class="tooltiptext"> <b>MAANAAKKAR - Student Activity Management System</b><br>(under development)</span>
+            </div>
+            <div class="probx">
+                <a href="D:\github\portfolio\info\info.html" target="_blank"><img src="./img/har1.png"></a>
+                <span class="tooltiptext"> <b>Human Activity Recognition and Predeiction</b><br>(under development)</span>
             </div>
         </div>
     </section>
@@ -184,14 +195,16 @@
     <div class="social">
         <a href="https://www.linkedin.com/in/razeen-i-761b291a4/" target="_blank"><i class="fa fa-linkedin"></i></a>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://wa.me/9487312098" target="_blank"><i class="fa fa-whatsapp"></i></a>
+        <a href="https://wa.me/+919487312098" target="_blank"><i class="fa fa-whatsapp"></i></a>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://www.facebook.com/razeen.i11" target="_blank"><i class="fa fa-facebook-official"></i></a> 
+        <a href="https://www.facebook.com/razeen.iqbal.5" target="_blank"><i class="fa fa-facebook-official"></i></a> 
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/imrazeen" target="_blank"><i class="fa fa-twitter"></i></a> 
         &nbsp;&nbsp;&nbsp;
         <a href="https://www.instagram.com/razeen.i11" target="_blank"><i class="fa fa-instagram"></i></a>
     </div>
     <div class="copyright" style="color:gray;">
-        <p>Copyright © 2020 RZsWORLD. All Rights Reserved.</p>
+        <p>Copyright © 2021 RZsWORLD. All Rights Reserved.</p>
     </div>
     <script type="text/javascript">
         window.addEventListener('scroll', function(){
