--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     My ambition and goal is to become a proficient programmer. I have a special interest in automation and machine learning.
                     <br>
                     <br>
-                    Feel free to contact me, if you wish to work with me or even if you want my cooperation in your projects. 
+                    Feel free to contact me, if you wish to work with me or even if you want my contribution in your projects. 
                     <br>
                     <br>
                     mail to: razeeniqbal11@gmail.com <br>
