added contact form

--- a/index.html
+++ b/index.html
@@ -177,15 +177,12 @@
                 </div>
             </div>
             <div class="formbx">
-                <form action="mailto:razeeniqbal11@gmail.com" method="post" enctype="text/plain">
+                <form action="mail.php" method="post">
                     <h3>Message Me</h3>
                     <input type="text" name="name" placeholder="Full Name">
                     <input type="email" name="email" placeholder="Email">
-                    <textarea placeholder="Your Message"></textarea>
-                   <div class="tooltip">
-                    <button type="button" class="btn1" disabled>SEND</button>
-                    <span class="tooltiptext">Currently unavailable</span>
-                   </div>
+                    <textarea name="message" placeholder="Your Message"></textarea>
+                    <button type="button" class="btn1">SEND</button>
                     <br>
 
                 </form>
