submit button changed

--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
                 </div>
             </div>
             <div class="formbx">
-                <form action="mail.php" method="post">
+                <form action="./subfiles/mail.php" method="post">
                     <h3>Message Me</h3>
                     <input type="text" name="name" placeholder="Full Name">
                     <input type="email" name="email" placeholder="Email">
                     <textarea name="message" placeholder="Your Message"></textarea>
-                    <button type="button" class="btn1">SEND</button>
+                    <button type="submit" class="btn1">SEND</button>
                     <br>
 
                 </form>
