--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div class="formbx">
-                <form action="mail.php" method="post">
+                <form action="http://localhost/mail.php" method="post">
                     <h3>Message Me</h3>
                     <input type="text" name="name" placeholder="Full Name">
                     <input type="email" name="email" placeholder="Email">
