updated title logo

--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
         </div>
         <div class="content">
             <div class="probx">
-                <a href="https://github.com/razeen11/foodieweb.git" target="_blank"><img src="./img/delivery-truck.png"></a>
-                <span class="tooltiptext"><b>FOODIEWEB - Online Food Delivery System</b></span>
+                <a href="https://github.com/razeen11/foodieweb.git" target="_blank"><img src="./img/delivery-truck.png">
+                <span class="tooltiptext"><b>FOODIEWEB - Online Food Delivery System</b></span></a>
             </div>
             <div class="probx">
-                <a href="https://github.com/razeen11/virtual-assistant.git" target="_blank"><img src="./img/sera1.png"></a>
-                <span class="tooltiptext"><b>SERA - Smart and Eminent Robust Assistant</b></span>
+                <a href="https://github.com/razeen11/virtual-assistant.git" target="_blank"><img src="./img/sera1.png">
+                <span class="tooltiptext"><b>SERA - Smart and Eminent Robust Assistant</b></span></a>
             </div>
             <div class="probx">
-                <a href="https://github.com/razeen11/portfolio" target="_blank"><img src="./img/portfolio1.png"></a>
-                <span class="tooltiptext"><b>A simple portfolio template</b></span>
+                <a href="https://github.com/razeen11/portfolio" target="_blank"><img src="./img/portfolio1.png">
+                <span class="tooltiptext"><b>A simple portfolio template</b></span></a>
             </div>
             <div class="probx">
                 <img src="./img/online-recruitment.png" id="myBtn">
