--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#001" onclick="togglemenu();">About</a></li>
             <li><a href="#002" onclick="togglemenu();">Skills</a></li>
             <li><a href="#003" onclick="togglemenu();">Projects</a></li>
-            <li><a href="./resume/18CSR159 resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="https://drive.google.com/file/d/1SF4ZfxxuwyLnuz-16H9MBwrjPJu3hJW9/view?usp=sharing" target="_blank">Resume</a></li>
             <li><a href="#004" onclick="togglemenu();">Contact</a></li>
         </ul>
     </header>
@@ -56,7 +56,7 @@
                     <br>
                     mail: razeeniqbal11@gmail.com <br>
                     phone: 9487312098 <br>
-                    <a href="./resume/18CSR159 resume.pdf" class="btn2" target="_blank">RESUME</a>
+                    <a href="https://drive.google.com/file/d/1SF4ZfxxuwyLnuz-16H9MBwrjPJu3hJW9/view?usp=sharing" class="btn2" target="_blank">RESUME</a>
                 </p>
             </div>
             <div class="w50">
