--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="#002" onclick="togglemenu();">Skills</a></li>
             <li><a href="#003" onclick="togglemenu();">Projects</a></li>
             <li><a href="https://drive.google.com/file/d/1SF4ZfxxuwyLnuz-16H9MBwrjPJu3hJW9/view?usp=sharing" target="_blank">Resume</a></li>
+            <li><a href="https://github.com/razeen11" target="_blank">Github</a></li>
             <li><a href="#004" onclick="togglemenu();">Contact</a></li>
         </ul>
     </header>
@@ -204,6 +205,8 @@
         <a href="https://wa.me/+919487312098" target="_blank"><i class="fa fa-whatsapp"></i></a>
         &nbsp;&nbsp;&nbsp;
         <a href="https://www.instagram.com/razeen.i11" target="_blank"><i class="fa fa-instagram"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://www.github.com/razeen11" target="_blank"><i class="fa fa-github"></i></a>
         &nbsp;&nbsp;&nbsp;
         <a href="https://www.facebook.com/razeen.iqbal.5" target="_blank"><i class="fa fa-facebook-official"></i></a> 
         &nbsp;&nbsp;&nbsp;
